# hw1-project

./: build.sh  install.sh
envs/: env_android27.sh
platform-tool/: initrc.sh
src/apk/app/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
src/apk/app/libs/: libhello-lib.dylib
src/apk/app/src/androidTest/java/com/tcl/nativeserviceapplication/: ExampleInstrumentedTest.java
src/apk/app/src/main/: AndroidManifest.xml
src/apk/app/src/main/java/com/tcl/nativeserviceapplication/: MainActivity.java
src/apk/app/src/main/jni/: hello-lib.cpp
src/apk/app/src/main/res/layout/: activity_main.xml
src/apk/app/src/main/res/values/: strings.xml
src/apk/app/src/test/java/com/tcl/nativeserviceapplication/: ExampleUnitTest.java
src/apk/gradle/wrapper/: gradle-wrapper.properties
src/service/Client/: helloworld.h  helloworldclient.cpp
src/service/Server/: CMakeLists.txt  helloworldservice.cpp  helloworldservice.h
